--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,15 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+tasks.withType(Javadoc) {
+    options.encoding = "UTF-8"
+}
+
 group 'aya.patpat'
-version '0.0.3' // test branch
+version '0.0.4' // test branch
 
 publish {
     userOrg = 'l-patpat'
